<resources>
    <string name="app_name">My Kiddie</string>
    <string name="title_activity_tips4">Mengenal Fase Kehamilan</string>
    <string name="Content4Line1">Ada banyak fase kehamilan yang dilalui oleh bumil. Oleh sebab itu, ada baiknya bila Anda mengetahui tentang apa yang terjadi pada tubuh Anda, tentu untuk menjaga kesehatan tubuh dan janin dengan baik. Beberapa fase pada kehamilan, yaitu:</string>
    <string name="Content4Line2">1. Kandungan usia 0-4 minggu</string>
    <string name="Content4Line3">Pada fase ini janin hanya berukuran 2 mm, dan bakal otak mulai muncul. Selain merasa mual, Anda mungkin juga akan mulai sering merasa lapar. Beberapa bumil pun mengalami perubahan hormon. Hindari rokok dan kafein!</string>
    <string name="Content4Line4">2. Kandungan usia 4-8 minggu</string>
    <string name="Content4Line5">Pada fase ini (sekitar 6 minggu) jantung janin mulai berdetak. Organ tubuh seperti tangan, kaki, tubuh, dan kepala mulai terbentuk. Payudara dan pinggul Anda akan terlihat lebih besar, dan nafsu makan mengingkat. Kurangi konsumsi lemak, dan perbanyak konsumsi makanan tinggi protein terutama protein nabati. Namun, Anda perlu tetap menjaga berat badan.</string>
    <string name="Content4Line6">3. Kandungan usia 8-12 minggu</string>
    <string name="Content4Line7">Pada fase ini seluruh organ tubuh sudah mulai terbentuk, termasuk mata, hidung, dan dagu. Bumil akan sering buang air kecil. Meskipun begitu, Anda tetap harus perbanyak minum air putih. Bumil juga harus memperbanyak asupan omega-3 dan asam folat. Periksa kandungan Anda sesuai dengan anjuran dokter.</string>
    <string name="Content4Line8">4. Kandungan usia 12-16 minggu</string>
    <string name="Content4Line9">Pada fase ini jantung dan paru-paru janin sudah mulai berdetak jika didengarkan dengan alat bantu USG. Ibu disarankan untuk melakukan pemeriksaan USG pada fase ini. Jaga kesehatan rongga mulut Anda, karena dapat menyebabkan kelahiran prematur dan bayi dengan Berat Badan Lahir Rendah (BBLR).</string>
    <string name="Content4Line10">5. Kandungan usia 16-20 minggu</string>
    <string name="Content4Line11">Pada fase ini, rambut halus mulai tumbuh di tubuh calon bayi Anda. Ia juga mulai dapat merespon suara ibunya, dan dapat mulai bergerak teratur.</string>
    <string name="Content4Line12">6. Kandungan usia 20-24 minggu</string>
    <string name="Content4Line13">Calon bayi sudah mulai membuka kelopak matanya. Selain rambutnya yang mulai tumbuh, lemak di tubuhnya juga mulai terbentuk.</string>
    <string name="Content4Line14">7. Kandungan usia 24-28 minggu</string>
    <string name="Content4Line15">Detak jantungnya mulai berdetak cepat, dan ia juga sudah mulai mengenal suara Anda.</string>
    <string name="Content4Line16">8. Kandungan usia 28-32 minggu</string>
    <string name="Content4Line17">Matanya sudah mulai merespon cahaya, dan kepalanya mulai mengarah ke bawah. Pada usia 36 minggu, posisi kepala sudah berada di daerah panggul. Ia juga sudah mulai berlatih menghisap, menelan, dan bernafas.</string>
    <string name="title_activity_tips6">Mempersiapkan Perlengkapan Bayi</string>
    <string name="Content6Line1">1. Popok</string>
    <string name="Content6Line2">Untuk awal kelahiran, sebaiknya pilih popok tali biasa. Bayi baru lahir frekuensi buang air kecil (BAK) dan buang air besar (BAB)nya masih cukup tinggi. Jika menggunakan popok sekali pakai akan cenderung boros karena setiap kali BAB harus diganti. Begitupula jika memakai cloth diaper (clodi). Pilih popok kain yang berbahan katun dan nyaman dipakai. Belilah dalam jumlah banyak, sekitar dua lusin untuk mengantisipasi jika tidak kering sehingga tidak kehabisan popok. Setelah frekuensi BAB jarang, bayi bisa memakai popok sekali pakai atau cloth diaper (clodi) yang lebih hemat dan ramah lingkungan. Akan tetapi walaupun memakai dua jenis popok ini, ibu tetap harus rajin mengganti popok bayi supaya kulit bayi tidak mengalami iritasi. Setelah bayi berusia satu bulan dan semakin besar, ibu bisa menggunakan celana bayi sebagai pengganti popok.</string>
    <string name="Content6Line3">2. Baju Bayi</string>
    <string name="Content6Line4">Beli yang lengan pendek dan lengan panjang yang bisa dipakai ketika dingin. Penggantian baju bayi tidak sesering popok. Oleh karena itu, tidak usah membeli terlalu banyak. Lagipula bayi cepat tumbuh besar sehingga masa pakai baju menjadi sebentar.</string>
    <string name="Content6Line5">3. Bedong</string>
    <string name="Content6Line6">Sebagian ibu masih suka membedong anaknya. Bedong hanya boleh digunakan pada awal-awal kelahiran (sekitar dua pekan pertama). Itupun tidak boleh kencang-kencang dan bukan untuk meluruskan kaki bayi, melainkan hanya untuk menghangatkan bayi. Setelah bayi mulai banyak gerak, bedong sebaiknya tidak digunakan karena dapat menghambat perkembangan motorik bayi. Jika ingin membuat bayi hangat, bayi bisa dipakaikan baju panjang dan celana panjang.</string>
    <string name="Content6Line7">4. Kaos tangan</string>
    <string name="Content6Line8">Kaos tangan berfungsi melindungi bayi dari kukunya yang belum dipotong. Jika kukunya sudah bisa dipotong, maka kaus tangan tidak diperlukan lagi. Oleh karena itu, kaus tangan tidak diperlukan dalam jumlah yang banyak.</string>
    <string name="Content6Line9">5. Gendongan bayi</string>
    <string name="Content6Line10">Kadang bayi perlu digendong untuk ditenangkan. Belilah gendongan bayi yang cocok, bisa gendongan instant atau kain panjang.</string>
    <string name="Content6Line11">6. Perlak</string>
    <string name="Content6Line12">Supaya air kencing bayi tidak membasahi kasur, para ibu bisa menggunakan perlak. Belilah perlak besar (biasanya dijual meteran) sehingga masih bisa terus dipakai ketika bayi sudah mulai banyak gerak.</string>
    <string name="Content6Line13">7. Kojong/kelambu</string>
    <string name="Content6Line14">Berfungsi melindungi bayi dari nyamuk atau serangga lainnya. Jika di rumah biasanya banyak nyamuk, belilah kelambu dengan ukuran yang sama dengan kasur agar bisa terus dipakai dalam jangka waktu lama.</string>
    <string name="Content6Line15">8. Handuk dan Washlap</string>
    <string name="Content6Line16">Pilih handuk yang berukuran besar agar lebih mudah dalam mengeringkan bayi. Sedangkan waslap, beli dalam jumlah yang agak banyak karena pada awal-awal bayi lahir digunakan untuk mandi maupun membersihkan sisa-sisa BAK dan BAB bayi.</string>
    <string name="Content6Line17">9. Ember dan perlengkapan mandi</string>
    <string name="Content6Line18">Tidak harus membeli ember bermerk, cukup ember dengan kualitas yang bagus dan tidak gampang pecah. Sedangkan perlengkapan mandi adalah shampo dan sabun bayi. Pilih yang zat aktifnya paling sedikit sehingga aman digunakan oleh kulit bayi yang senstif.</string>
    <string name="Content6Line19">Sedangkan perlengkapan yang tidak perlu dibeli adalah:</string>
    <string name="Content6Line20">1. Gurita</string>
    <string name="Content6Line21">Gurita dapat mengganggu pernafasan bayi. Gerakan pernafasan bayi banyak melibatkan otot-otot perut. Selain itu, karena perut tertahan maka kemampuan bayi minum bisa berkurang dan bayi cenderung lebih mudah muntah. Untuk perawatan tali pusat juga tidak baik karena tali pusat akan sulit kering.</string>
    <string name="Content6Line22">2. Dot</string>
    <string name="Content6Line23">Penggunaan dot pada bayi bisa mengakibatkan bingung puting sehingga bayi tidak mau lagi menyusu langsung pada ibunya. Akibatnya produksi ASI berkurang dan akhirnya bayi tidak diberi ASI lagi. Padahal ASI merupakan makanan yang terbaik bagi bayi. Pemberian susu formula beresiko alergi dan berbagai penyakit lain. Selain itu, dot juga tidak bisa dijamin steril sehingga beresiko menyebabkan diare. Belum lagi resiko kembung, randang telinga, dan jamuran. Oleh karena itu, jika ibu berhalangan menyusui langsung, perahlah ASI sehingga menjadi ASI perah dan gunakan sendok kecil untuk memberikannya pada bayi.</string>
    <string name="Content6Line24">3. Minyak telon</string>
    <string name="Content6Line25">Minyak telon bersifat panas dan iritan sehingga bisa menyebabkan iritasi pada bayi. Bahkan pada beberapa bayi bisa mengakibatkan kulitnya menjadi gosong dan mengelupas. Oleh karena itu, penggunaan minyak telon pada bayi tidak dianjurkan.</string>
    <string name="Content6Line26">4. Bedak bayi</string>
    <string name="Content6Line27">Bedak bisa menyebabkan penyumbatan pori-pori kulit sehingga bayi lebih beresiko terkena biang keringat. Bedak juga bisa membentuk gumpalan-gumpalan yang justru bisa menjadi sarang kuman. Memang pada awalnya bedak bisa mengeringkan karena menyerap air. Akan tetapi bedak juga berpotensi menyebabkan gesekan sehingga kulit bayi menjadi merah dan lecet.</string>
    <string name="Content6Line28">5. Sit in baby walker</string>
    <string name="Content6Line29">Baby walker (model sit in) justru menghambat kemampuan berjalan bayi karena tendensi berjalan manual muncul terlambat sehingga bayi tidak segera mencapai keseimbangan berjalan. Selain itu sit in baby walker menghalangi bayi malihat kakinya sehingga bayi tidak mengetahui bahwa mereka berjalan dengan kakinya. Bayi yang menggunakan sit in baby walker juga cenderung menunjukkan cara jalan yang berbeda dari anak biasa. Sit in baby walker juga berpotensi menyebabkan cidera karena bayi lebih cepat bergerak menjangkau apa yang diinginkannya. Jika ingin melatih anak berjalan, gunakan push baby walker. Tidak harus yang mahal, bisa mainan beroda yang dapat didorong, atau kursi plastik yang ringan yang dapat didorong-dorong.</string>
    <string name="Content6Line30">6. Bouncer (ayunan bayi)</string>
    <string name="Content6Line31">Bouncer bisa menyebabkan bayi kurang diberi kesempatan untuk berlatih miring, tengkurap, duduk, dan berdiri. Bayi harus diberi kebebasan sehingga motoriknya berkembang dengan baik.</string>
    <string name="title_activity_tips8">Susu dan produk olahan susu</string>
    <string name="Content8Line1">1. Susu</string>
    <string name="Content8Line2">Susu baik untuk ibu hamil karena mengandung kalsium, protein, vitamin D, dan omega-3, yang berguna untuk pertumbuhan tulang dan kesehatan mata serta otak. </string>
    <string name="Content8Line3">Untuk memenuhi kebutuhan nutrisi, ibu hamil dianjurkan minum 3-4 gelas sehari. Jumlah itu setara dengan sumbangan lebih dari 10-16 g protein dan meningkatkan asupan kalsium 1,2 g serta memberikan energi 320-640 kalori.  Namun, minum 3-4 gelas susu sehari bukan hal mudah, apa lagi jika si ibu tak terbiasa minum susu.  Cobalah siasati dengan mengolah susu menjadi sup, pudding, kue, es krim tau di tambahkan pada makanan selingan, semisal es buah, biskuit, dan kue. Sementara bubuk susu dapat di tambahkan  pada pembuatan telur kocok, mashed dan scalloped potato.</string>
    <string name="Content8Line4">2. Yoghurt</string>
    <string name="Content8Line5">Susu yang baik dikonsumsi yaitu susu yang sudah melalui proses fermentasi atau di pasteurisasi, salah satunya yaitu yoghurt. </string>
    <string name="Content8Line6">Yoghurt yunani biasanya memiliki kandungan protein dua kali protein yogurt biasa, hal ini menjadikannya salah satu makanan favorit selama kehamilan. Dan segala jenis yoghurt merupakan sumber kalsium, yang penting dalam diet kehamilan. Kalau ibu hamil tidak mendapatkan kalsium yang cukup, maka jumlah kalsium yang akan sampai pada perkembangan bayi Anda juga terbatas.</string>
    <string name="Content8Line7">3. Keju</string>
    <string name="Content8Line8">Lebih baik memilih keju yang dibuat dari susu yang sudah difermentasi atau di pasteurisasi seperti keju keras.</string>
    <string name="Content8Line9">Tujuan selama kehamilan adalah untuk memastikan Anda memberikan segalanya yang dibutuhkan bayi tanpa mengorbankan kesehatan dan gizi Anda sendiri. Kalsium akan membantu menjaga tulang Anda sendiri agar tetap utuh sambil membuat kerangka yang sehat untuk bayi Anda.</string>
</resources>