<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tips6"
    android:orientation="vertical" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_activity_tips6"
            style="@style/JudulTips"
            android:text="@string/title_activity_tips6" />

        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lines" 
        android:paddingBottom="10dp"/>
        
        <ImageView
            android:id="@+id/test_image"
            android:layout_width="fill_parent"
            android:layout_height="188dp"
            android:src="@drawable/tips_pic6"
            android:padding="5dp" />

        <TextView
            style="@style/emphasize"
            android:text="@string/Content6Line1"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line2"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line3"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line4"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line5"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line6"/>
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line7"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line8"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line9"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line10"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line11"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line12"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line13"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line14"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line15"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line16"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line17"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line18"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line19"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line20"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line21"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line22"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line23"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line24"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line25"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line26"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line27"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line28"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line29"/>
    	
    	<TextView
            style="@style/emphasize"
            android:text="@string/Content6Line30"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    	    android:text="@string/Content6Line31"/>
    </LinearLayout>

</ScrollView>
