<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tips4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_activity_tips4"
            style="@style/JudulTips"
            android:text="@string/title_activity_tips4" />

        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lines" 
        android:paddingBottom="10dp"/>
        
        <ImageView
            android:id="@+id/test_image"
            android:layout_width="fill_parent"
            android:layout_height="188dp"
            android:src="@drawable/tips_pic4"
            android:padding="5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Content4Line1"/>
    	
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line2"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line3"/>
    
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line4"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line5"/>
    	
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line6"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line7"/>
    
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line8"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line9"/>

    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line10"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line11"/>
    
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line12"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line13"/>
    	
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line14"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line15"/>
    
    	<TextView
    	    style="@style/emphasize"
    	    android:text="@string/Content4Line16"/>
    	
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/Content4Line17"/>
    	
    </LinearLayout>

</ScrollView>
